# estrellio_logging_lib

./: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml
docs/: EstrellioLogger Usage Manual.md
src/: logging_demo.py
src/c/: estrellio_logging_lib.c  estrellio_logging_lib.h  estrellio_logging_py.h
src/cpp/: estrellio_logging_lib.cpp  estrellio_logging_lib.h
src/estrellio_logging_lib/: __init__.py  core.py
tests/: test_core.py
tests/native/: test_c_smoke.c  test_cpp_smoke.cpp
